# M2_2023_2024

./: README.md
Animation_simulation/: balistic.c
Animation_simulation/KITLIBGX2024/libg2x.6e/: Makefile  install_local.sh  install_standard.sh
Animation_simulation/KITLIBGX2024/libg2x.6e/include/: g2x.h  g2x_board.h  g2x_capture.h  g2x_colors.h  g2x_control.h  g2x_draw.h  g2x_geoalgo.h  g2x_geom.h  g2x_particle.h  g2x_pixmap.h  g2x_polygon.h  g2x_tools.h  g2x_transfo.h  g2x_types.h  g2x_window.h
Animation_simulation/KITLIBGX2024/libg2x.6e/src/: _g2x_button.c  _g2x_ctrlpnt.c  _g2x_ctrlprm.c  _g2x_exclusive_button.c  _g2x_keys.c  _g2x_mouse.c  _g2x_popup.c  _g2x_print.c  _g2x_scroll.c  _g2x_switch.c  g2x_board.c  g2x_capture.c  g2x_colors.c  g2x_draw.c  g2x_geoalgo.c  g2x_geom.c  g2x_particle.c  g2x_pixmap.c  g2x_polygon.c  g2x_tools.c  g2x_transfo.c  g2x_window.c
Animation_simulation/KITLIBGX2024/libg2x.6e/work/: Corde  JuliaSet  JuliaSet.0  Makefile  g2x_00_squelette  g2x_01_control  g2x_02_cercle  g2x_03_drawfunction  g2x_04_hsvflower  g2x_05_hsvcolor  g2x_06_image  g2x_REFERENCE
Animation_simulation/KITLIBGX2024/libg2x.6e/work/include/: Link.h  PMat.h
Animation_simulation/KITLIBGX2024/libg2x.6e/work/src/: Corde.c  JuliaSet.0.c  JuliaSet.c  Link.c  PMat.c  copie.c  exercice01.c  g2x_00_fcount.c  g2x_01_control.c  g2x_02_cercle.c  g2x_03_drawfunction.c  g2x_04_hsvflower.c  g2x_05_hsvcolor.c  g2x_05_hsvcolor_0.c  g2x_06_image.c  g2x_07_image.c  g2x_REFERENCE.c
Animation_simulation/KITLIBGX2024/libg3x.6e/work/: Makefile
CG/GLImac-Template/TP1/: exo1_triangle_blanc.cpp  exo2_triangle_couleurs.cpp  exo3_structure_vertex.cpp  exo4_quad.cpp  exo5_disc.cpp
CG/GLImac-Template/TP2/: exo1_shader.cpp  exo2_triangleGenerique.cpp  exo3_vertex.cpp
CG/GLImac-Template/TP2/shaders/: doubleSize2D.vs.glsl  doubleX2D.vs.glsl  translate2D.vs.glsl
CG/GLImac-Template/TP3/: exo1_sphere.cpp  exo3_earth.cpp  exo4_cloud.cpp  exo5_multiShaders.cpp
CG/GLImac-Template/TP4/: exo1_camera.cpp
CG/GLImac-Template/TP_Proj/: SolarSystem.cpp  TESTSystem.cpp  Torus.cpp  trash.txt
CG/GLImac-Template/TP_Proj/shaders/: multiTex3D.fs.glsl
CG/GLImac-Template/glimac/include/glimac/: TrackballCamera.hpp
GPGPU/TP1/Ex1/: deviceProperties
GPGPU/TP1/Ex2/: addVector
GPGPU/TP1/Ex2/src/: student.cu
GPGPU/TP1/Ex3/: sepia
GPGPU/TP1/Ex3/src/: student.cu
GPGPU/TP2_GPGPU/: convolution
GPGPU/TP2_GPGPU/src/: student.cu
GPGPU/TP3_GPGPU/: Makefile  reduce
GPGPU/TP3_GPGPU/include/: student.hpp
GPGPU/TP3_GPGPU/tp3_VONG_Stephane/: student.cu
GPGPU/TP4_GPGPU/: Makefile  README.md  antialiasing
GPGPU/TP4_GPGPU/src/: main.cu  student.cu
Geometry/Gacha (avec fente)/: CMakeLists.txt
Geometry/Gacha (avec fente)/tp_src/src/: ball.hpp  main.cpp
Geometry/Gacha (sans fente)/tp_src/: CMakeLists.txt  cheat_sheet.md
Geometry/Gacha (sans fente)/tp_src/src/: ball.cpp  ball.hpp  main.cpp
Geometry/TP1/: Answer.txt  CMakeLists.txt  HelloWorld.cpp  main.cpp
Geometry/TP1_VONG_Stephane/: CMakeLists.txt  Rapport.md  main.cpp
Geometry/tp_c3ga_c++_correction/tp_src/: CMakeLists.txt
Geometry/tp_c3ga_c++_correction/tp_src/src/: Geogebra_c3ga.cpp  Geogebra_c3ga.hpp  main.cpp
IA/: UNets - Segmentation - TD.ipynb
Morpho/COUTSYJean/: Instruction.txt  TPPb1.ipynb  pb1q1.sh  pb1q2.sh  pb1q3.sh  pb2q1.sh  pb2q2.sh  pb2q3.sh  pb2q4.sh
Morpho/COUTSYJean/img/result/: pb1q1.ppm  pb1q2.pgm  pb2q2.pgm
Morpho/PERRETBenjamin/: Connected_filters.ipynb
Parallelisme/TP1/: Answer.md  Exercice1  Exercice1.c  Exercice2  Exercice2.c  Exercice3  Exercice4  Exercice5  Exercice5.c  out.pgm  trash.txt
Parallelisme/TP1/src/: Exercice3.c  Exercice4.c  Exercice5.c
Parallelisme/TP_Unite/: CMakeLists.txt
Parallelisme/TP_Unite/src/: backgroundSub.cpp  backgroundSub_Thread.cpp  backgroundSub_ThreadSync.cpp  imgNormalizer.cpp
Signal/: Non-local means-exercises..ipynb
Signal/.ipynb_checkpoints/: Non-local means-exercises.-checkpoint.ipynb  TD-Denoising-Exercices-checkpoint.ipynb
Signal/TD2/.ipynb_checkpoints/: TD3 Spectral Analysis and Filtering-Exercise-checkpoint.ipynb
