PROJECT(DGI_TP1)

#Required in DGtal
CMAKE_MINIMUM_REQUIRED(VERSION 3.11)
set(CMAKE_CXX_STANDARD 11)

set(CMAKE_PREFIX_PATH ~/libs)
FIND_PACKAGE(DGtal REQUIRED LINKS ~/libs)
INCLUDE_DIRECTORIES(${DGTAL_INCLUDE_DIRS})
LINK_DIRECTORIES(${DGTAL_LIBRARY_DIRS})

ADD_EXECUTABLE(dgi_tp1 main.cpp)
TARGET_LINK_LIBRARIES(dgi_tp1 ${DGTAL_LIBRARIES})

