cmake_minimum_required(VERSION 2.8)
project( DisplayImage )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( imgNormalizer src/imgNormalizer.cpp )
add_executable( backgroundSub src/backgroundSub.cpp )
target_link_libraries( imgNormalizer ${OpenCV_LIBS} )
target_link_libraries( backgroundSub ${OpenCV_LIBS} )
set (CMAKE_CXX_FLAGS "-lstdc++fs -std=c++17")